--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,8 +35,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/media/sapere-aude/D/CONTEST/intervalMap.cpp",
-      "program": "/media/sapere-aude/D/CONTEST/intervalMap.cpp/build/Debug/outDebug",
+      "cwd": "/media/sapere-aude/D/CONTEST/intervalMap",
+      "program": "/media/sapere-aude/D/CONTEST/intervalMap/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
